# pandoc_static_katex

./: .gitignore  LICENSE  README.md  pandoc_static_katex.py  pyproject.toml  run_test.py
test_cases/: math.md
